...
    func switchToNextQuestion() {
        currentQuestionIndex += 1
    }
    
    func newAlert() -> AlertModel{
        let alertModel = AlertModel(
            title: "Игра окончена!",
            message: makeResultMessage(),
            buttonText: "Попробовать ещё раз",
            buttonAction: {[weak self] in
                self?.restartGame()
            })
        return alertModel
...
